--- a/argocd/apps/infra/istio/resources/cert.yaml
+++ b/argocd/apps/infra/istio/resources/cert.yaml
@@ -1,31 +1,31 @@
-# apiVersion: cert-manager.io/v1
-# kind: Certificate
-# metadata:
-#   name: default-ingress-internal-cert
-#   namespace: istio-system
-# spec:
-#   commonName: yanello.net
-#   dnsNames:
-#   - "*.yanello.net"
-#   - yanello.net
-#   secretName: default-ingress-internal-cert
-#   issuerRef:
-#     name: local-intermediate-ca1-issuer
-#     kind: ClusterIssuer
-#     group: cert-manager.io
-# ---
-# apiVersion: cert-manager.io/v1
-# kind: Certificate
-# metadata:
-#   name: default-ingress-cert
-#   namespace: istio-system
-# spec:
-#   commonName: yanello.net
-#   dnsNames:
-#   - "*.yanello.net"
-#   - yanello.net
-#   secretName: default-ingress-cert
-#   issuerRef:
-#     name: letsencrypt-prod
-#     kind: ClusterIssuer
-#     group: cert-manager.io
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: default-ingress-internal-cert
+  namespace: istio-system
+spec:
+  commonName: yanello.net
+  dnsNames:
+  - "*.yanello.net"
+  - yanello.net
+  secretName: default-ingress-internal-cert
+  issuerRef:
+    name: local-intermediate-ca1-issuer
+    kind: ClusterIssuer
+    group: cert-manager.io
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: default-ingress-cert
+  namespace: istio-system
+spec:
+  commonName: yanello.net
+  dnsNames:
+  - "*.yanello.net"
+  - yanello.net
+  secretName: default-ingress-cert
+  issuerRef:
+    name: letsencrypt-prod
+    kind: ClusterIssuer
+    group: cert-manager.io
