undo use annotations for gateway cert2

--- a/argocd/apps/infra/istio/resources/istio-gw.yaml
+++ b/argocd/apps/infra/istio/resources/istio-gw.yaml
@@ -67,7 +67,7 @@ spec:
       tls:
         mode: Terminate
         certificateRefs:
-          - name: gateway-api-cert
+          - name: default-ingress-cert
       allowedRoutes:
         namespaces:
           from: All
