--- a/argocd/apps/mealie/manifests/deploy.yaml
+++ b/argocd/apps/mealie/manifests/deploy.yaml
@@ -36,7 +36,7 @@ spec:
               cpu: '1000m'
               memory: 2Gi
             requests:
-              cpu: 10m
+              cpu: 300m
               memory: 350Mi
           name: mealie
           env:
@@ -59,22 +59,22 @@ spec:
           volumeMounts:
             - mountPath: /app/data
               name: data
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 9000
-            initialDelaySeconds: 30
-            periodSeconds: 30
-            timeoutSeconds: 5
-            failureThreshold: 10
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 9000
-            initialDelaySeconds: 60
-            periodSeconds: 15
-            timeoutSeconds: 5
-            failureThreshold: 5
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 9000
+          #   initialDelaySeconds: 30
+          #   periodSeconds: 30
+          #   timeoutSeconds: 5
+          #   failureThreshold: 10
+          # livenessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 9000
+          #   initialDelaySeconds: 60
+          #   periodSeconds: 15
+          #   timeoutSeconds: 5
+          #   failureThreshold: 5
       restartPolicy: Always
       volumes:
         - name: data
