disable paperless ai for now

--- a/argocd/apps/paperless/kustomization.yaml
+++ b/argocd/apps/paperless/kustomization.yaml
@@ -18,5 +18,5 @@ resources:
 - manifests/pvc.yaml
 - manifests/service.yaml
 - manifests/vs.yaml
-- manifests/sts.yaml
+#- manifests/sts.yaml
 - manifests/http-route.yaml
