disable paperless ai for now2

--- a/argocd/apps/paperless/manifests/secret-generator.yaml
+++ b/argocd/apps/paperless/manifests/secret-generator.yaml
@@ -9,4 +9,4 @@ metadata:
 
 files:
   - manifests/paperless-secrets.yaml
-  - manifests/paperless-ai-secrets.yaml
+  #- manifests/paperless-ai-secrets.yaml
