rxchrome version tag

--- a/argocd/apps/resume/manifests/http-route.yaml
+++ b/argocd/apps/resume/manifests/http-route.yaml
@@ -1,30 +1,29 @@
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  annotations:
-  labels:
-    app.kubernetes.io/instance: resume-app
-  name: resume-httproute
-  namespace: resume
-spec:
-  parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
-  hostnames:
-  - rxresume.yanello.net
-  - resume.yanello.net
-  rules:
-  - backendRefs:
-    - name: rx-resume
-      namespace: resume
-      port: 3010
-      
-    matches:
-    - path:
-        type: PathPrefix
-        value: /marcus/latest
----
+# apiVersion: gateway.networking.k8s.io/v1
+# kind: HTTPRoute
+# metadata:
+#   annotations:
+#   labels:
+#     app.kubernetes.io/instance: resume-app
+#   name: resume-httproute
+#   namespace: resume
+# spec:
+#   parentRefs:
+#     - name: gateway-api
+#       namespace: istio-system
+#       sectionName: https
+#   hostnames:
+#     - rxresume.yanello.net
+#     - resume.yanello.net
+#   rules:
+#     - backendRefs:
+#         - name: rx-resume
+#           namespace: resume
+#           port: 3010
+#       matches:
+#         - path:
+#             type: PathPrefix
+#             value: /marcus/latest
+# ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
@@ -36,15 +35,14 @@ metadata:
   namespace: resume
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: gateway-api
+      namespace: istio-system
+      sectionName: https
   hostnames:
-  - rxresume.yanello.net
-  - resume.yanello.net
+    - rxresume.yanello.net
+    - resume.yanello.net
   rules:
-  - backendRefs:
-    - name: rx-resume
-      namespace: resume
-      port: 3010
-
+    - backendRefs:
+        - name: rx-resume
+          namespace: resume
+          port: 3010
