--- a/argocd/apps/resume/manifests/deploy.yaml
+++ b/argocd/apps/resume/manifests/deploy.yaml
@@ -68,7 +68,7 @@ spec:
         #     memory: 2048Mi
 
       - name: rx-chrome
-        image: ghcr.io/browserless/chromium:latest@sha256:3b1b9b0a0f3ad7d6446acc8e7dc95890697dd45f40d2531cfd81d25057aa52d8
+        image: ghcr.io/browserless/chromium:v2.25.2@sha256:3b1b9b0a0f3ad7d6446acc8e7dc95890697dd45f40d2531cfd81d25057aa52d8
         ports:
         - containerPort: 3000
         env:
