--- a/argocd/apps/argocd/lb.yaml
+++ b/argocd/apps/argocd/lb.yaml
@@ -11,7 +11,7 @@ metadata:
     app.kubernetes.io/part-of: argocd
   name: argocd-server-lb
   annotations:
-    metallb.universe.tf/loadBalancerIPs: 10.10.8.4
+    metallb.io/loadBalancerIPs: 10.10.8.4
 spec:
   ports:
     - name: http
