--- a/argocd/apps/minecraft/manifests/svc.yaml
+++ b/argocd/apps/minecraft/manifests/svc.yaml
@@ -4,7 +4,7 @@ kind: Service
 metadata:
   name: mc
   annotations:
-    metallb.universe.tf/loadBalancerIPs: 10.10.8.7
+    metallb.io/loadBalancerIPs: 10.10.8.7
   labels:
     service: mc
 spec:
