ignore dev for renovate

--- a/argocd/apps/infra/renovate/values.yaml
+++ b/argocd/apps/infra/renovate/values.yaml
@@ -42,6 +42,9 @@ renovate:
       "gradle": {
         "fileMatch": ["^build.gradle$"],
       },
+      "ignorePaths": []
+        "argocd/apps/dev"
+      ],
       "packageRules": [
         {
           "matchDatasources": ["docker", "kustomize", "kubernetes"],
