longhorn xfs sc

--- a/argocd/apps/dollardollar/manifests/sts.yaml
+++ b/argocd/apps/dollardollar/manifests/sts.yaml
@@ -58,7 +58,7 @@ spec:
         name: pgdata
       spec:
         accessModes: ["ReadWriteOnce"]
-        storageClassName: longhorn
+        storageClassName: longhorn-xfs
         resources:
           requests:
             storage: 1Gi
