--- a/argocd/apps/infra/storage/longhorn/kustomization.yaml
+++ b/argocd/apps/infra/storage/longhorn/kustomization.yaml
@@ -4,6 +4,8 @@ kind: Kustomization
 resources:
   - ./manifests/vs.yaml
   - ./manifests/http-route.yaml
+  - ./manifests/longhorn-xfs-sc.yaml
+  
 generators:
   - ./manifests/secret-generator.yaml
 
