--- a/argocd/apps/dollardollar/manifests/secrets.yaml
+++ b/argocd/apps/dollardollar/manifests/secrets.yaml
@@ -6,7 +6,7 @@ type: Opaque
 stringData:
     POSTGRES_USER: ENC[AES256_GCM,data:eWlAxk/w75kHoa7a,iv:SrlglxS2Ril4r7MF57PyuLhaeL2zmVWy4rwrUJwkLHo=,tag:UBVkrSOlQErQtNRR31elaw==,type:str]
     POSTGRES_PASSWORD: ENC[AES256_GCM,data:4Zlm+tGQKzq0/zrC8uf40GxZRt690wtBDs9Tr+/i6DImPo/Ej1WDcM4eHKI+auu6Pdpu+qeptECLSvjoXK9NSg==,iv:3O+9fDhuLsBltnImTRik6sFyRJrWlu6mv8TQRsZ6NQ8=,tag:DQZjyiobei0pW2/nI+peuQ==,type:str]
-    POSTGRES_DB: ENC[AES256_GCM,data:/oCdqOj8XutOPsU=,iv:Of5vRmDK6fZy1aHCj4x/HYTzLbUUdNaepcyT6HSKqww=,tag:D4qXFQteBJep1a1lyRrx4A==,type:str]
+    POSTGRES_DB: ENC[AES256_GCM,data:M37yb2vlR+yHs0Yg,iv:G9FPIGAWxPCNfptiah6MyWP1+Fy7i8wxnMVvFh9Mkqg=,tag:Gvd9BEND82F+1o06u88h6g==,type:str]
     SECRET_KEY: ENC[AES256_GCM,data:HsEm2whUp1nl8jkT0MVqN4X3Q5KMm7xrd5ajS6HzHJ4U8uO/AYqrJyrqwEc08xWs48FD8nyWPlrD0NlgwOxFXA==,iv:1/wDJhClJ4D8hNB0HDC71QPsEi3s2gqNt6Fgp6SiBn0=,tag:dEmtJwnstYvR/RKYwdbHAQ==,type:str]
 sops:
     kms: []
@@ -23,8 +23,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-12T01:40:27Z"
-    mac: ENC[AES256_GCM,data:ExHYvzHFli4t8sxAJQcxLgUBXEZ0yoPAphf5eEqI3QnwZiz/+LMGWF+jcfSfC0hqZZ46w4dOPhWvrxUoW7YfttggKWoxEaBHNtnyMKkzvOs/g5J6/vg0skUSzxF45AI5pt+sYvegqQ+ig7Q/6uRPZICTELhOzg64EZkG9BlyCNc=,iv:wibScW6RjQgL6RNaLMeFB8t14tcw4JJ4eozdLNpgosY=,tag:gcSrCRz+hC3uAb+0w8adxw==,type:str]
+    lastmodified: "2025-03-12T02:07:36Z"
+    mac: ENC[AES256_GCM,data:Y0dyo0Vyv5wNoR0N0Wg0sLnl3W+8hXaOZyymIxqAk7eM/OVDwrVyqw1Q1kNN0S9FGvd1po3UuSuw9vcD8oHKDJmfcah9eEORaC2R+dar0dySDVUtKJqqthqnH2/Qf+7vaCFpsZ8r1QG4ALKAGuT4LAy8b5W2/G4QiVAOj1ZmT8s=,iv:/16dG2gqQymhoXJBdapVPYnJyAxeKQuMzwFI9vDKRlk=,tag:/xsfwQo1cdoo85BstRRchw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
