--- a/argocd/apps/dollardollar/manifests/svc.yaml
+++ b/argocd/apps/dollardollar/manifests/svc.yaml
@@ -15,10 +15,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: postgres
   labels:
     app: postgres
-  name: postgres
+  annotations:
+    metallb.io/loadBalancerIPs: 10.10.8.4
 spec:
+  type: LoadBalancer
   ports:
     - name: postgres
       port: 5432
