fix renovate ignore path

--- a/argocd/apps/infra/renovate/values.yaml
+++ b/argocd/apps/infra/renovate/values.yaml
@@ -42,7 +42,7 @@ renovate:
       "gradle": {
         "fileMatch": ["^build.gradle$"],
       },
-      "ignorePaths": []
+      "ignorePaths": [
         "argocd/apps/dev"
       ],
       "packageRules": [
