--- a/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
@@ -1,7 +1,20 @@
+victoria-metrcis-operator:
+  serviceAccount:
+    create: false
+    
+alertmanager:
+  enabled: true
+
+vmalert:
+  annotations: {}
+  enabled: true
+
+vmagent:
+  enabled: true
+
 defaultDashboards:
   annotations:
     argocd.argoproj.io/sync-options: ServerSideApply=true
-    
 grafana:
   admin:
     existingSecret: grafana-secrets
