--- a/argocd/apps/media-server/plex/deploy.yaml
+++ b/argocd/apps/media-server/plex/deploy.yaml
@@ -93,7 +93,7 @@ spec:
             - name: NVIDIA_DRIVER_CAPABILITIES
               value: compute,video,utility
             - name: PLEX_UID
-              value: "1000"1.41.5.9522-a96edc606
+              value: "1000"
             - name: PLEX_GID
               value: "1000"
             - name: ALLOWED_NETWORKS
