--- a/argocd/apps/infra/backrest/deploy.yaml
+++ b/argocd/apps/infra/backrest/deploy.yaml
@@ -29,7 +29,7 @@ spec:
                     values:
                       - marcus-server
       containers:
-        - image: garethgeorge/backrest:latest@sha256:efcc68d841078a4ec26e2da2be8a0b676dcdb4884349f27c3e21156c3fee58f1
+        - image: garethgeorge/backrest:1.7.3@sha256:efcc68d841078a4ec26e2da2be8a0b676dcdb4884349f27c3e21156c3fee58f1
           imagePullPolicy: IfNotPresent
           name: backrest
           env:
