ignore tests for renovate

--- a/argocd/apps/infra/renovate/values.yaml
+++ b/argocd/apps/infra/renovate/values.yaml
@@ -19,6 +19,7 @@ renovate:
       "digest": {
         "automerge": true
       },
+      "ignoreTests": true
       "prBodyColumns": [
         "Package",
         "Update",
