--- a/argocd/apps/infra/cnpg/values.yaml
+++ b/argocd/apps/infra/cnpg/values.yaml
@@ -7,3 +7,6 @@ affinity:
               operator: In
               values:
                 - marcus-server
+              
+annotations:
+  argocd.argoproj.io/sync-options: ServerSideApply=true
