--- a/argocd/apps/infra/cnpg/values.yaml
+++ b/argocd/apps/infra/cnpg/values.yaml
@@ -8,5 +8,5 @@ affinity:
               values:
                 - marcus-server
               
-annotations:
+commonAnnotations:
   argocd.argoproj.io/sync-options: ServerSideApply=true
