nextcloud db use xfs

--- a/argocd/apps/nextcloud/values.yaml
+++ b/argocd/apps/nextcloud/values.yaml
@@ -50,7 +50,7 @@ cronjob:
 redis:
   enabled: true
   global:
-    storageClass: longhorn
+    storageClass: longhorn-xfs
   master:
     persistence:
       enabled: false
