nextcloud db use xfs2

--- a/argocd/apps/nextcloud/values.yaml
+++ b/argocd/apps/nextcloud/values.yaml
@@ -50,7 +50,7 @@ cronjob:
 redis:
   enabled: true
   global:
-    storageClass: longhorn-xfs
+    storageClass: longhorn
   master:
     persistence:
       enabled: false
@@ -94,7 +94,7 @@ externalDatabase:
 mariadb:
   enabled: true
   global:
-    defaultStorageClass: longhorn
+    defaultStorageClass: longhorn-xfs
   primary:
     persistence:
       enabled: true
