--- a/argocd/apps/nextcloud/values.yaml
+++ b/argocd/apps/nextcloud/values.yaml
@@ -98,6 +98,7 @@ mariadb:
   primary:
     persistence:
       enabled: true
+      storageClass: longhorn-xfs
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
