--- a/argocd/apps/nextcloud/manifests/http-route.yaml
+++ b/argocd/apps/nextcloud/manifests/http-route.yaml
@@ -1,23 +1,25 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  annotations:
-    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
   labels:
     app.kubernetes.io/instance: nextcloud-app
   name: nextcloud-httproute
   namespace: nextcloud
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: gateway-api
+      namespace: istio-system
+      sectionName: https
   hostnames:
-  - nextcloudk8s.yanello.net
+    - nextcloudk8s.yanello.net
   rules:
-  - backendRefs:
-    - name: nextcloud
-      namespace: nextcloud
-      port: 8080
-      
-
+    - backendRefs:
+        - name: nextcloud
+          namespace: nextcloud
+          port: 8080
+      filters:
+        - type: ResponseHeaderModifier
+          responseHeaderModifier:
+            setHeaders:
+              - name: Strict-Transport-Security
+                value: max-age=15552000; includeSubDomains;
