--- a/argocd/apps/argocd/secrets.yaml
+++ b/argocd/apps/argocd/secrets.yaml
@@ -7,6 +7,7 @@ metadata:
 type: Opaque
 stringData:
     webhook.github.secret: ENC[AES256_GCM,data:gXNTNJHj5rKxmKwJJBmdJ24nvBAtjsY/SJyIws/VuBDzUYGR6Frmew==,iv:zLKMGfax3ZLLrkrDsB6YswhbSNiYUZ1PIOyIVuY9EQM=,tag:RNzpoXtGihe6MCI6Mq1SXQ==,type:str]
+    dex.authentik.clientSecret: ENC[AES256_GCM,data:4y+tHs4hUz1j6Oaleu9IobN5Ahf0oDkXBpBNK5NwN+JJt1OY32wcacg0zNZcb9pJzSrW82skJY3Lz+d2ua5BmkrHvPZutZjZuykcR0WaCV0ijEi1W+kvxAzyZ3hXl0M9xO9Oj3OsGk2o46vpiwtZuuhgI392k8dK4ZLT+iF3yug=,iv:PRSvmL1L6Wbilh9jv6HyTYwmikPb/GO7vBYtwVGlzhg=,tag:mYoigWn15sYSrqaEEnPUhg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +23,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-10T03:25:34Z"
-    mac: ENC[AES256_GCM,data:Hn5RTlLFmHV9/WXgRDQVhSDcrAZr19JViTmLZ+xEtm+CXDaPdxSXLnxBQJxDuLTxj217pRNXHOclTPSGchn0d5U305kFAI90SaUY86km2js4pVH9wkrU3EHMMp+e7Y5iTUetOGoGqXTScWJielGOGP1OXEmOKKkp+p4KiaWNvXc=,iv:Z2dOIFgaM6j+9vv/F5OnyC6OWDZbYRkjYJdKJPP1Cy8=,tag:Rg5336MJGRu7hhugQnj8qQ==,type:str]
+    lastmodified: "2025-03-17T00:56:28Z"
+    mac: ENC[AES256_GCM,data:ntccYs+3WIPArJABaIlbps6HqOJqxZ0+kYTpZcbk5INyneKziVutJASx+KzLm9Jmlwp3rFmJo53I04XoTcfNPwotmnpEUHFQMXPClhuxQgLj6IE9ariPCvgVCZXglftBKeVKHlevV7ngFStYG1qJdiKSnhIItdHItCyTxE/Kd68=,iv:CCC28eNYHoPz6RWb3HHEhx9DBk4SUtpbl7TOJCqD20A=,tag:7ZncOswF9pC6qXwBh7xO9A==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
-    version: 3.9.1
+    version: 3.9.4
