--- a/argocd/apps/paperless/manifests/secret-generator.yaml
+++ b/argocd/apps/paperless/manifests/secret-generator.yaml
@@ -4,9 +4,9 @@ metadata:
   name: paperless-secret-generator
   annotations:
     config.kubernetes.io/function: |
-        exec:
-          path: ksops
+      exec:
+        path: ksops
 
 files:
-  - manifests/paperless-secrets.yaml
+  - manifests/secrets.yaml
   #- manifests/paperless-ai-secrets.yaml
