--- a/argocd/apps/paperless/manifests/cm.yaml
+++ b/argocd/apps/paperless/manifests/cm.yaml
@@ -15,3 +15,4 @@ data:
   PAPERLESS_DBENGINE: mariadb
   PAPERLESS_DBPORT: '3306'
   PAPERLESS_CONSUMER_POLLING: '5'
+  PAPERLESS_APPS: allauth.socialaccount.providers.openid_connect
