--- a/argocd/apps/nextcloud/values.yaml
+++ b/argocd/apps/nextcloud/values.yaml
@@ -35,7 +35,16 @@ nextcloud:
     other.config.php: |-
       <?php
       $CONFIG = array (
-        'maintenance_window_start' => 9
+        'maintenance_window_start' => 9,
+        'allow_local_remote_servers' => true,
+      );
+    proxy.config.php: |-
+      <?php
+      $CONFIG = array (
+          'trusted_proxies' => array(
+            0 => '10.42.0.0/16',
+          ),
+          'forwarded_for_headers' => array('HTTP_X_FORWARDED_FOR', 'HTTP_X_FORWARDED')
       );
 
 cronjob:
