--- a/argocd/apps/nextcloud/values.yaml
+++ b/argocd/apps/nextcloud/values.yaml
@@ -37,6 +37,16 @@ nextcloud:
       $CONFIG = array (
         'maintenance_window_start' => 9
       );
+    proxy.config.php: |-
+      <?php
+      $CONFIG = array (
+          'trusted_proxies' => array(
+            0 => RemoteIPInternalProxy 10.0.0.0/8,
+            1 => RemoteIPInternalProxy 172.16.0.0/12,
+            2 => RemoteIPInternalProxy 192.168.0.0/16,
+          ),
+          'forwarded_for_headers' => array('HTTP_X_FORWARDED_FOR', 'HTTP_X_FORWARDED')
+      );
 
 cronjob:
   enabled: true
