--- a/argocd/apps/linkwarden/manifests/secrets.yaml
+++ b/argocd/apps/linkwarden/manifests/secrets.yaml
@@ -14,6 +14,7 @@ stringData:
     SPACES_BUCKET_NAME: ENC[AES256_GCM,data:m+ReCucUfN/h5Q==,iv:YWRNA/2LM+4dRmKV5ThlJfBfzz4QNE81rXJ0T1TOaJs=,tag:z60Pf/d0TlDo6JoPTeWCww==,type:str]
     SPACES_REGION: ENC[AES256_GCM,data:SHKkp7MJeA==,iv:d8pvlY5xCzRTgV3PTlbzwYT3JU+QTkT+zQGa2XPkAXQ=,tag:iJLvG5n705XDkKFYkcT5Tw==,type:str]
     SPACES_FORCE_PATH_STYLE: ENC[AES256_GCM,data:Fj1ODA==,iv:BPrP3H5d7eX8x+DcGyllhjpTT9dMno2seY9zPFVniHw=,tag:KK7c0uimmyQcWh+buwPcdA==,type:str]
+    AUTHENTIK_CLIENT_SECRET: ENC[AES256_GCM,data:bd/3EENBL6NH68VmwWLPAOLazQ3EMm6tv+TNleAyXwwEbY1w7SjQ3Lict//mK99hKsDAcyyzgDgGEhShoJZczrtINjmfbwlKQEdo3Ei+wlld6rRtsl/3J9dLxh0Z0HBm9hXbiZDnHnhqOwWzAsYAiiQxTASkFXqcy8Ie6ejw220=,iv:+fgFMDb9Jc6g66vdqFHDEoUwEq2qExuwZVaD/3w6GIA=,tag:IeXofeGgrErHrrZeYIDISA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -29,8 +30,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-14T03:24:17Z"
-    mac: ENC[AES256_GCM,data:wZsh5XaWZ2TKIRqg1RxqxWvGLIfvw6GSWEY0ZeFvRd1FosjnZ9ivPNuk60I3hKvUhoNpDRCJl0rzVlUOt4jQ7TDBSaEK125nOKncDIZ8FfNqs3MDmnQl2naAG8vdH7BAWEriNChjd/csb4Ri103U9GKyNO0JkRRJ3hCwdSMpx0s=,iv:UIKvXXtxDroCzJ4unmi5g5ZdBUVM+0bfODw9tPHwF5Q=,tag:APjNs8bM2BAM4CRI5iaFHw==,type:str]
+    lastmodified: "2025-03-18T01:00:13Z"
+    mac: ENC[AES256_GCM,data:MVzWveYWgs6d/yiC8JucGlUbtyMIfEmzdd9VdqHhElJU2oagoKsgLNZO2/bWqAiDhZBEMj1t/A3fpEREirMpILJrxzH8A/ohM3dZhgLCe/8Lm0HaZs+FmNN+ukHXsT9/qJlS6XqVEiN1U0gkR/VipTObKVX2mnH/7B0HjWQNuCo=,iv:E/lyQKZ7akTgM94s0GnhSuzyvIZBwjR76dQ4y/dJbjE=,tag:/1re56fN/VpjfZ9fHD2vcg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
