--- a/argocd/apps/linkwarden/manifests/sts.yaml
+++ b/argocd/apps/linkwarden/manifests/sts.yaml
@@ -29,7 +29,13 @@ spec:
           - name: DATABASE_URL
             value: postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@postgres:5432/$(POSTGRES_DB)
           - name: NEXTAUTH_URL
-            value: http://localhost:3000/api/v1/auth
+            value: https://linkwarden.yanello.net/api/v1/auth
+          - name: NEXT_PUBLIC_AUTHENTIK_ENABLED
+            value: "true"
+          - name: AUTHENTIK_ISSUER
+            value: https://authentik.yanello.net/application/o/linkwarden
+          - name: AUTHENTIK_CLIENT_ID
+            value: 67Bx3KAAXldSRDpVihw7fpuZQ1Y3I3vEvrFK1fvR
           image: ghcr.io/linkwarden/linkwarden:latest
           volumeMounts:
             - mountPath: /data/data
