renovate value comma

--- a/argocd/apps/infra/renovate/values.yaml
+++ b/argocd/apps/infra/renovate/values.yaml
@@ -19,7 +19,7 @@ renovate:
       "digest": {
         "automerge": true
       },
-      "ignoreTests": true
+      "ignoreTests": true,
       "prBodyColumns": [
         "Package",
         "Update",
