nextcloud xff header5

--- a/argocd/apps/nextcloud/values.yaml
+++ b/argocd/apps/nextcloud/values.yaml
@@ -44,7 +44,9 @@ nextcloud:
           'trusted_proxies' => array(
             0 => '10.42.0.0/16',
           ),
-          'forwarded_for_headers' => array('HTTP_X_ENVOY_EXTERNAL_ADDRESS')
+          'forwarded_for_headers' => array(
+            0 => 'HTTP_X_ENVOY_EXTERNAL_ADDRESS'
+          )
       );
 
 cronjob:
