--- a/argocd/apps/nextcloud/values.yaml
+++ b/argocd/apps/nextcloud/values.yaml
@@ -20,6 +20,10 @@ nextcloud:
       value: https://nextcloud.yanello.net
     - name: APACHE_DISABLE_REWRITE_IP
       value: "1"
+    - name: TRUSTED_PROXIES
+      value: 10.42.0.0/16
+    - name: FORWARDED_FOR_HEADERS
+      value: HTTP_X_ENVOY_EXTERNAL_ADDRESS
   objectStore:
     s3:
       enabled: true
@@ -38,14 +42,14 @@ nextcloud:
         'maintenance_window_start' => 9,
         'allow_local_remote_servers' => true,
       );
-    proxy.config.php: |-
-      <?php
-      $CONFIG = array (
-          'trusted_proxies' => array(
-            0 => '10.42.0.0/16',
-          ),
-          'forwarded_for_headers' => array('HTTP_X_ENVOY_EXTERNAL_ADDRESS'),
-      );
+    # proxy.config.php: |-
+    #   <?php
+    #   $CONFIG = array (
+    #       'trusted_proxies' => array(
+    #         0 => '10.42.0.0/16',
+    #       ),
+    #       'forwarded_for_headers' => array('HTTP_X_ENVOY_EXTERNAL_ADDRESS'),
+    #   );
 
 cronjob:
   enabled: true
