--- a/argocd/apps/nextcloud/manifests/secrets.yaml
+++ b/argocd/apps/nextcloud/manifests/secrets.yaml
@@ -14,6 +14,9 @@ stringData:
     s3-secret-key: ENC[AES256_GCM,data:oxmluRoyaU6VyYgxKZ3QYrw0qzfywu0HFctWEvd3S1pqJ87e0095+g==,iv:8rw1TlTa8vharu68VO2Fsmbgq8FQpPxlDQcN7uIVgKw=,tag:Ko0BLv5SI2Fd/L7rDexW9w==,type:str]
     NEXTCLOUD_ADMIN_USER: ENC[AES256_GCM,data:GbvF4FnB,iv:YYPkPVs5jr0s5/sE4nFBR0Uo6fwR0JXY2JFMKGBaU0U=,tag:9wbh2Z6pdLH1ybNxCthvnQ==,type:str]
     NEXTCLOUD_ADMIN_PASSWORD: ENC[AES256_GCM,data:5uQw25o9j0RkK7NI,iv:xPkVskBpv8D+Mr00ZzTrbBCB1f7/VvgN8bmu0y5qGqM=,tag:pwEwkOObJHXjTUxOfmXYnw==,type:str]
+    SMTP_PASSWORD: ENC[AES256_GCM,data:IxD8Wdsf+nDDBMw+4/e6+w==,iv:/6pKtS8mZUCWsPV1A1ipRqsMFfRliZp0Ke8BIKdeVQI=,tag:mt7Ks0McIy1/vXXnVz2gGg==,type:str]
+    SMTP_HOST: ENC[AES256_GCM,data:QuhGzO7Z6Gb1geLLIyc=,iv:fHMM8JcjBgix6Zsd+UzJyrLKuoRzASfoz/IX4ErRdJc=,tag:IWjnlmo5YfF7PIGqh0kmlQ==,type:str]
+    SMTP_NAME: ENC[AES256_GCM,data:fAXahhTnOVK9Rl8rD0s=,iv:+FtR4mfQcFlGslcOXnfN74Qgci5/F/HVDqa73Fls6Mk=,tag:queZhfF2Jlvu81uVa+5GKA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -29,8 +32,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-26T15:03:41Z"
-    mac: ENC[AES256_GCM,data:w1CtNeDYuMAmBu+DYwgKu46t7gHwu77pehdL+Qo9gbU7pja0kiWXvalqFTbvDCiM4mPzTK8cJ2qr75+nsOhVajr8oeYfOHcAvCLIDrbCy80YVRU2kdP6QwoXe2rF1Qh2s2oirJhfrauRpwqiT/aorDleDmUY5zxNe/Sh7ZgmGOM=,iv:x002w+/viVdokhhSOn4XkTYi3T2yzuKicLYcaJVAOpU=,tag:AelyxIqCIpsuO7L3z5mAaw==,type:str]
+    lastmodified: "2025-03-18T02:12:23Z"
+    mac: ENC[AES256_GCM,data:IZPqFWt+SplKkdwbpLZIIrro1kgJDbY4epnTc4xFp2nCfqxquB49ICDXpuMeA47rCFmulKhXd8Lx/0HnW7nKlroyrn5Dab8z+QZtR92WMeTn1ATP9adhFNBVTYC5sXCXPkIumR6USFvQbL3o5rVa8LiNs4dOPF+oH1u0FcjN97g=,iv:MC5u9IeuZau2SUoV3GbNxcMmkvAs7xCqWXiT4XCn6z8=,tag:EJkIah0q3a09YU/eh7zmbg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
