--- a/argocd/apps/nextcloud/values.yaml
+++ b/argocd/apps/nextcloud/values.yaml
@@ -7,6 +7,16 @@ nextcloud:
     secretName: nextcloud-secrets
     usernameKey: NEXTCLOUD_ADMIN_USER
     passwordKey: NEXTCLOUD_ADMIN_PASSWORD
+    smtpUsernameKey: SMTP_NAME
+    smtpPasswordKey: SMTP_PASSWORD
+    smtpHostKey: SMTP_HOST
+  mail:
+    enabled: true
+    fromAddress: marcus
+    domain: gmail.com
+    smtp:
+      port: 465
+      secure: ssl
   trustedDomains:
     - nextcloud.yanello.net
   extraEnv:
