minio root user4

--- a/argocd/apps/infra/storage/minio/manifests/values.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/values.yaml
@@ -12,6 +12,8 @@ persistence:
   storageClass: local-path
 
 tenant:
+  configuration:
+    name: myminio-env-configuration
   pools:
     - name: pool-0
       storageClassName: local-path
