minio root user5

--- a/argocd/apps/infra/storage/minio/manifests/values.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/values.yaml
@@ -12,6 +12,7 @@ persistence:
   storageClass: local-path
 
 tenant:
+  existingSecret: true
   configuration:
     name: myminio-env-configuration
   pools:
