--- a/argocd/apps/infra/gitea/kustomization.yaml
+++ b/argocd/apps/infra/gitea/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 helmCharts:
     - name: gitea
       repo: https://dl.gitea.com/charts/
-      version: "*"
+      version: "0.0.0"
       releaseName: gitea
       namespace: gitea
       valuesFile: ./manifests/values.yaml
