--- a/argocd/apps/infra/gitea/kustomization.yaml
+++ b/argocd/apps/infra/gitea/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+resources:
+  - ./manifests/http-route.yaml
+
 helmCharts:
     - name: gitea
       repo: https://dl.gitea.com/charts/
