--- a/argocd/apps/media-server/kometa/manifests/cm.yaml
+++ b/argocd/apps/media-server/kometa/manifests/cm.yaml
@@ -4,7 +4,7 @@ kind: ConfigMap
 metadata:
   name: config-kometa
 data:
-  config.yml: |
+  config.yaml: |
     libraries: # This is called out once within the config.yml file
       Movies:
         collection_files:
