--- a/argocd/apps/media-server/kometa/manifests/cronjob.yaml
+++ b/argocd/apps/media-server/kometa/manifests/cronjob.yaml
@@ -19,7 +19,7 @@ spec:
           - name: kometa
             image: kometateam/kometa:latest 
             imagePullPolicy: Always
-            command: ["python", "kometa.py", "-r"] 
+            command: ["sleep", "inf"] #["python", "kometa.py", "-r"] 
             env:
             - name: TZ
               value: "UTC"
