--- a/argocd/apps/media-server/kometa/manifests/cm.yaml
+++ b/argocd/apps/media-server/kometa/manifests/cm.yaml
@@ -221,9 +221,115 @@ data:
       ignore_cache: false
       monitor_existing: false
 ---
----
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: config-movies
-data:
+data: 
+  letterboxd_downloaded.yaml: |
+    external_templates:
+      pmm: templates
+      template_variables:
+        radarr_add_missing: true
+        radarr_tag: letterboxd
+        collection_order: custom
+    
+    templates:
+      lbxd:
+        default:
+          letterboxd_list_<<key>>: <<letterboxd_list>>
+          name_mapping_<<key>>: <<name_mapping>>
+          minimum_items: 2
+        optional:
+          - name_mapping
+          - name_<<key>>
+          - summary_<<key>>
+          - imdb_list_<<key>>
+        minimum_items: <<minimum_items>>
+        name_mapping: <<name_mapping_<<key>>>>
+        imdb_list: <<imdb_list_<<key>>>>
+        letterboxd_list: <<letterboxd_list_<<key>>>>
+        summary: <<summary_<<key>>>>
+        name: <<name_<<key>>>>
+    
+    dynamic_collections:
+      Letterboxd:
+        type: custom
+        template:
+          - lbxd
+          - shared
+          - arr
+          - custom
+        data:
+          oscars_23: Oscars 2023
+          oscars_24: Oscars 2024
+          imdb_250: IMDb Top 250
+          boxd_250: Letterboxd Top 250
+          tarantino: Quentin Tarantino
+          nolan: Christopher Nolan
+          dupieux: Quentin Dupiuex
+          baker: Sean Baker
+          yorgos: Yorgos Lanthimos
+          ghibli: Studio Ghibli
+          kaufman: Charlie Kaufman
+          aster: Ari Aster
+        template_variables:
+          letterboxd_list:
+            ghibli: https://letterboxd.com/itsannaelisa/list/studio-ghibli/ 
+            oscars_23: https://letterboxd.com/oscars/list/the-95th-academy-award-nominees-for-best-22/
+            oscars_24: https://letterboxd.com/oscars/list/the-96th-academy-award-nominees-for-best/
+            oscars_25: https://letterboxd.com/oscars/list/the-97th-academy-award-feature-film-nominees/
+            imdb_250: https://letterboxd.com/dave/list/imdb-top-250
+            boxd_250: https://letterboxd.com/dave/list/official-top-250-narrative-feature-films/
+            tarantino: https://letterboxd.com/ooah02/list/tarantino/
+            nolan: https://letterboxd.com/jaywill/list/nolan/
+            dupieux: https://letterboxd.com/benjabel/list/quentin-dupieux/
+            baker: https://letterboxd.com/jhuang98/list/sean-baker/
+            yorgos: https://letterboxd.com/jaywill/list/yorgos/
+            kaufman: https://letterboxd.com/blexinfinity/list/charlie-kaufman/
+            aster: https://letterboxd.com/wetty_yammer/list/aster/
+          image:
+            default: universe/<<key>>
+          radarr_tag:
+            oscars_23: oscars_23
+            oscars_24: oscars_24
+            oscars_25: oscars_25
+            imdb_250: imdb_250
+            boxd_250: boxd_250
+          radarr_quality:
+            oscars_23: Ultra-HD
+            oscars_24: Ultra-HD
+            oscars_25: Ultra-HD
+            imdb_250: Ultra-HD
+            boxd_250: Ultra-HD
+            nolan: Ultra-HD
+            tarantino: Ultra-HD
+            dupieux: HD-1080P
+            yorgos: Ultra-HD
+            kaufman: Ultra-HD
+            aster: Ultra-HD
+            ghibli: HD-1080P
+          collection_section:
+            stew: 03
+            ghibli: 06
+            oscars_23: 05
+            oscars_24: 05
+            oscars_25: 05
+            imdb_250: 05
+            boxd_250: 05
+            tarantino: 07
+            nolan: 07
+            dupieux: 07
+            baker: 07
+            yorgos: 07
+            kaufman: 07
+            aster: 07
+          collection_order:
+            ghibli: release.desc
+            kaufman: release.desc
+            tarantino: release.desc
+            nolan: release.desc
+            dupieux: release.desc
+            baker: release.desc
+            yorgos: release.desc
+            aster: release.desc
