--- a/argocd/apps/media-server/kometa/manifests/cronjob.yaml
+++ b/argocd/apps/media-server/kometa/manifests/cronjob.yaml
@@ -29,7 +29,7 @@ spec:
                 name: kometa-secrets  
             volumeMounts:
             - name: config-kometa
-              mountPath: /config
+              mountPath: /config/config.yml
               subPath: config.yml
             # - name: config-movies
             #   mountPath: /config/Movies
